# hwhal

./: CMakeLists.txt
debian/: changelog  control  libhwhal-dev.install  libhwhal1.install  rules
evdev/: CMakeLists.txt  keys-evdev.cpp  keys-evdev.h
hwhal/: CMakeLists.txt  battery.h  context.cpp  context.h  control.h  display.h  hwhal.h  keys.h  lights.h  loopintegration.h  plugin.cpp  plugin.h  sensors.h  usb.h
lib/: CMakeLists.txt  battery.cpp  battery.h  context.cpp  context.h  control.cpp  control.h  display.cpp  display.h  hwhal.cpp  hwhal.h  info.cpp  info.h  keys.h  plugin.cpp  plugin.h  usb.cpp  usb.h
loop-integrations/: CMakeLists.txt  asio.cpp  asio.h  glib.cpp  glib.h
plugin/: CMakeLists.txt  batteryhal.h  displayhal.cpp  displayhal.h  infohal.cpp  infohal.h  lightshal.cpp  lightshal.h  plugin.cpp  usbhal.cpp  usbhal.h
systemstate/: CMakeLists.txt  hwhal.cpp  hwhal.h  hwhal.ini  sensors.cpp  sensors.h
test/: CMakeLists.txt  test.cpp
